[package]
name = "polkadot-rpc"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
sp-blockchain = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
sp-runtime = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
sp-api = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
sp-consensus = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
sp-consensus-babe = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
sc-rpc = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
sc-consensus-babe = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"}
sc-consensus-babe-rpc = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"}
sc-consensus-epochs = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"}
sc-finality-grandpa = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
sc-finality-grandpa-rpc = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
sc-keystore = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0"  }
pallet-transaction-payment-rpc = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
