[package]
name = "polkadot-node-core-runtime-api"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
sp-api = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
sp-blockchain = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }

polkadot-primitives = { path = "../../../primitives" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../subsystem" }

[dev-dependencies]
sp-core = { git = "https://github.com/KILTprotocol/substrate", rev = "68014e8a0" }
futures = { version = "0.3.5", features = ["thread-pool"] }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../subsystem", features = ["test-helpers"] }
